--- a/src/app/edit-item/edit-item.component.html
+++ b/src/app/edit-item/edit-item.component.html
@@ -11,6 +11,6 @@
 <label>New Goal:</label>
 <input [(ngModel)]="selectedItem.goal" >
 <br>
-<!-- <button (click)="beginUpdatingItem(selectedItem)">Update</button> -->
+<button (click)="beginUpdatingItem(selectedItem)">Update</button>
 <hr>
 <button (click)="beginDeletingItem(selectedItem)">Delete</button>
