--- a/src/app/edit-item/edit-item.component.html
+++ b/src/app/edit-item/edit-item.component.html
@@ -9,8 +9,18 @@
 <input [(ngModel)]="selectedItem.description">
 <br>
 <label>New Goal:</label>
-<input [(ngModel)]="selectedItem.goal" >
+<input [(ngModel)]="selectedItem.goal">
 <br>
+<label>New Category:</label>
+<select [(ngModel)]="selectedItem.category">
+  <option value="" selected disabled>Select Category</option>
+  <option value="Ideas">Ideas</option>
+  <option value="Projects">Projects</option>
+  <option value="Charity">Charitable Acts</option>
+</select>
+
+<br>
+
 <button (click)="beginUpdatingItem(selectedItem)">Update</button>
 <hr>
 <button (click)="beginDeletingItem(selectedItem)">Delete</button>
