--- a/src/app/marketplace/marketplace.component.html
+++ b/src/app/marketplace/marketplace.component.html
@@ -3,7 +3,7 @@
 <div *ngFor="let item of items | async" class="panel panel-default">
   <div class="panel-body">
     <h3><em>{{item.name}}</em> by {{item.author}}</h3><br>
-    <h4>Description: {{item.description}}</h4><h5>Goal: $ {{item.goal}}</h5>
+    <h4>Description: {{item.description}}</h4><h5>Goal: {{item.goal}}</h5><h5>Category: {{item.category}} </h5>
     <div *ngIf="currentRoute === '/admin'">
       <app-edit-item [selectedItem]="item"></app-edit-item>
     </div>
