--- a/src/app/marketplace/marketplace.component.html
+++ b/src/app/marketplace/marketplace.component.html
@@ -7,10 +7,10 @@
        <option value= "ideas"> Ideas </option>
      </select>
 
-<div *ngFor="let item of items | async | categorySort:categoryFilter " class="panel panel-default">
+<div *ngFor="let item of items | async | categorySort:categoryFilter " (click)="goToDetailPage(item)" class="panel panel-default">
   <div class="panel-body">
     <h3><em>{{item.name}}</em> by {{item.author}}</h3><br>
-    <h4>Description: {{item.description}}</h4><h5>Goal: {{item.goal}}</h5><h5>Category: {{item.category}} </h5>
+    <h4>Description: {{item.description}}</h4><h5>Goal: {{item.goal}}</h5><h5>Category: {{item.category}} </h5><h3>{{item.$key}}</h3>
     <div *ngIf="currentRoute === '/admin'">
       <app-edit-item [selectedItem]="item"></app-edit-item>
     </div>
